--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -54,17 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
     "def display_board(board):\n",
-    "    \n",
-    "    pass"
+    "\n",
+    "    clear_output()\n",
+    "    print(board[7]+\"|\"+board[8]+\"|\"+board[9])\n",
+    "    print(board[4]+\"|\"+board[5]+\"|\"+board[6])\n",
+    "    print(board[1]+\"|\"+board[2]+\"|\"+board[3])"
    ]
   },
   {
@@ -76,13 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " | | \n",
+      " | | \n",
+      " | | \n"
+     ]
+    }
+   ],
    "source": [
-    "test_board = ['#','X','O','X','O','X','O','X','O','X']\n",
+    "test_board = [' ']*10\n",
     "display_board(test_board)"
    ]
   },
@@ -95,15 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def player_input():\n",
     "    \n",
-    "    pass"
+    "    marker= ' '\n",
+    "    \n",
+    "    while marker != \"X\" and marker != \"O\":\n",
+    "        marker =  input(\"Player1 , chose X or O: \")\n",
+    "        \n",
+    "    player1 = marker\n",
+    "        \n",
+    "    if player1 == 'X':\n",
+    "        player2 = 'O'\n",
+    "    else:\n",
+    "        player2 = 'X'\n",
+    "            \n",
+    "    return (player1,player2)\n",
+    "        "
    ]
   },
   {
@@ -115,11 +135,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player1 , chose X or O: OL\n",
+      "Player1 , chose X or O: P\n",
+      "Player1 , chose X or O: O\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('O', 'X')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "player_input()"
    ]
@@ -349,7 +387,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
