--- a/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
+++ b/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
@@ -25,29 +25,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Line:\n",
     "    \n",
     "    def __init__(self,coor1,coor2):\n",
-    "        pass\n",
+    "        self.coor1 = coor1\n",
+    "        self.coor2 = coor2\n",
+    "        \n",
+    "        \n",
     "    \n",
     "    def distance(self):\n",
-    "        pass\n",
+    "        \n",
+    "        x1,y1 = self.coor1\n",
+    "        x2,y2 = self.coor2\n",
+    "        \n",
+    "        return ((x2-x1)**2 + (y2-y1)**2)**0.5\n",
     "    \n",
     "    def slope(self):\n",
-    "        pass"
+    "        x1,y1 = self.coor1\n",
+    "        x2,y2 = self.coor2\n",
+    "        \n",
+    "        return (y2-y1)/(x2-x1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# EXAMPLE OUTPUT\n",
@@ -80,89 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.6"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "li.slope()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "________\n",
-    "#### Problem 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill in the class "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "class Cylinder:\n",
-    "    \n",
-    "    def __init__(self,height=1,radius=1):\n",
-    "        pass\n",
-    "        \n",
-    "    def volume(self):\n",
-    "        pass\n",
-    "    \n",
-    "    def surface_area(self):\n",
-    "        pass"
+    "c1 = (3,2)\n",
+    "c2 = (8,10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# EXAMPLE OUTPUT\n",
-    "c = Cylinder(2,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "56.52"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.volume()"
+    "li = Line(c1,c2)"
    ]
   },
   {
@@ -173,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "94.2"
+       "9.433981132056603"
       ]
      },
      "execution_count": 8,
@@ -182,13 +120,156 @@
     }
    ],
    "source": [
+    "li.distance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li.slope()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "________\n",
+    "#### Problem 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fill in the class "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cylinder:\n",
+    "    \n",
+    "    def __init__(self,height=1,radius=1):\n",
+    "        self.height = height\n",
+    "        self.radius = radius\n",
+    "        \n",
+    "    def volume(self):\n",
+    "        return self.height * 3.14 * (self.radius)**2\n",
+    "    \n",
+    "    def surface_area(self):\n",
+    "        top = 3.14*(self.radius**2)\n",
+    "        \n",
+    "        return (2*top) + (2*3.14*self.radius*self.height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXAMPLE OUTPUT\n",
+    "c = Cylinder(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.52"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.volume()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94.2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "c.surface_area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = Cylinder(2)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
