Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -102,8 +102,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What would you use to find a number’s square root, as well as its square? "
-   ]
+    "What would you use to find a number’s square root, as well as its square?; a floating point number "
+  ]
   },
   {
    "cell_type": "code",
