--- a/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
+++ b/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
@@ -1137,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2 (main, Mar 27 2023, 15:03:16) [Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.11.2"
   },
   "vscode": {
    "interpreter": {
